active learning framework works now

--- a/code/cpp/Makefile
+++ b/code/cpp/Makefile
@@ -4,8 +4,11 @@ CFLAGS=-std=c++11
 
 all: main
 
-main: metric model utils
-	g++ main.cpp counterfactural_model.h metric.o utils.o model.o -o main $(CFLAGS)
+main: metric model utils pool
+	g++ al_main.cpp counterfactural_model.h metric.o utils.o model.o active_learning_algo.h pool.o active_learning_strategies.h al_utils.h -o main $(CFLAGS)
+
+pool:
+	g++ -c pool.cpp -o pool.o $(CFLAGS)
 
 model:
 	g++ -c model.cpp -o model.o $(CFLAGS)
