--- a/code/cpp/Makefile
+++ b/code/cpp/Makefile
@@ -4,8 +4,8 @@ CFLAGS=-std=c++11
 
 all: main
 
-main: metric model utils pool counterfactural_model active_learning_strategies active_learning_algo al_utils
-	g++ al_main.cpp counterfactural_model.o metric.o utils.o model.o active_learning_algo.o pool.o active_learning_strategies.o al_utils.o -o main $(CFLAGS)
+main: metric model utils pool counterfactural_model active_learning_strategies active_learning_algo al_utils xgboost_model
+	g++ al_main.cpp counterfactural_model.o metric.o utils.o model.o active_learning_algo.o pool.o active_learning_strategies.o al_utils.o xgboost_model.o -o main $(CFLAGS) $(XGBFLAGS) $(XGBLIBS)
 
 al_utils:
 	g++ -c al_utils.cpp -o al_utils.o $(CFLAGS)
@@ -30,6 +30,9 @@ metric:
 
 utils:
 	g++ -c utils.cpp -o utils.o $(CFLAGS)
+
+xgboost_model:
+	g++ -c xgboost_model.cpp -o xgboost_model.o $(CFLAGS) $(XGBFLAGS)
 
 clean:
 	rm main *.o
